--- a/08-api-routes-project/package.json
+++ b/08-api-routes-project/package.json
@@ -11,6 +11,7 @@
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "swr": "^0.4.2"
+    "swr": "^0.4.2",
+    "uuid": "^9.0.0"
   }
 }
