--- a/08-api-routes-project/package.json
+++ b/08-api-routes-project/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^5.7.0",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "sharp": "^0.32.4",
     "swr": "^0.4.2",
     "uuid": "^9.0.0"
   }
