--- a/08-api-routes-project/package.json
+++ b/08-api-routes-project/package.json
@@ -13,7 +13,6 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sharp": "^0.32.4",
-    "swr": "^0.4.2",
-    "uuid": "^9.0.0"
+    "swr": "^0.4.2"
   }
 }
