--- a/10-authentication/package.json
+++ b/10-authentication/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "mongodb": "^3.7.4",
     "next": "10.0.6",
