--- a/10-authentication/package.json
+++ b/10-authentication/package.json
@@ -15,5 +15,10 @@
     "next-auth": "3.29.10",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.49.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
